2010-04-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #3977: Permissions not set on extracted localization files (Thanks to Lars Houmark)

2010-04-25 Francois Suter  <francois@typo3.org>

	* Fixed bug: #14107: Scheduler: Missing Flash message in the Scheduler (thanks to Georg Ringer)

2010-04-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14182: Multiple join conditions are not supported

2010-04-22 Jochen Rau <jochen.rau@typoplanet.de>

	* Fixed bug #14131: Styling of cookie warning is hardcoded (thanks to Jigal van Hemert)

2010-04-22 Jochen Rau <jochen.rau@typoplanet.de>

	* Fixed bug #13972: cropHTML uses faulty reg exp for HTML entities (thanks to Ralf Hettinger)

2010-04-22  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #14176: unit test for RemoveXSS triggers fatal error in phpunit extension (thanks to Jigal van Hemert)

2010-04-22  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #3996: Constant Editor - Default Image Width [styles.content.imgtext.linkWrap.width] - wrong description (thanks to Martin Herzog)
	* Fixed bug #12908: wrong distance between image rows  [css styled content]

2010-04-22  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14177: Change CSS classes- and id names to identifyable install tool names

2010-04-20  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13741: cache_treelist does not take FE users into account
	* Fixed bug #14149: tslib_cObj::getTreeList() incorrectly checks cache entries

2010-04-20  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to feature #13698: proxy for the mail() function - typos corrected (thanks to Georg Ringer)

2010-04-20  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14096: scheduler: Move the scheduler tests to the scheduler sysext (thanks to Oliver Klee)
	* Fixed bug #13471: List module eats up tons of memory if displaying records with many references
	* Fixed bug #14152: Table sys_log, field details is too small