@@ -1,5 +1,6 @@
 2010-04-26  Christian Kuhn  <lolli@schwarzbu.ch>
 
+	* Follow-up to bug #3977: Added unit tests for t3lib_div:mkdir() and t3lib_div::fixPermissions()
 	* Fixed bug #3977: Permissions not set on extracted localization files (Thanks to Lars Houmark)
 
 2010-04-25 Francois Suter  <francois@typo3.org>
